--- a/css work/styles.css
+++ b/css work/styles.css
@@ -9,26 +9,78 @@ body, html {
    width: 100%;
 
 }
+@font-face {
+    font-family: gaurav;
+    src: url(Retro\ Floral.ttf);
+}
+@font-face {
+    font-family: journey;
+    src: url(GreatVibes-Regular.ttf);
+}
 
 .box1 {
     height: 100%;
     width: 100%;
     background-image: url(https://images.unsplash.com/photo-1768326943634-f15d407bda45?q=80&w=1506&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
     background-size: cover;
-    text-align: center;
-    padding-top: 200px;
+
+  
  
 }
 
+.journey {
+    padding-top: 200px;
+    text-align: center;
+}
 h1 {   
     color: white;
     font-size: 50px;
+    /* font-family: journey; */
+    font-weight: 500;
 }
 
-button {
+#expbutton {
     margin-top: 30px;
     font-size: 15px;
     padding: 10px 20px;
     border-radius: 20px;
     /* border: 3px solid black;     */
+}
+
+#container {
+
+    height: 7%;
+    width: 100%;
+    background-image: url(https://media.istockphoto.com/id/1732963074/photo/starry-night-sky-in-space.jpg?s=612x612&w=0&k=20&c=AHcmpswk3g3toHSFt5yCV_1uzMZUaJl95p3UIgm8euo=);
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 15px;
+    border: 1px solid white;   /* 👈 border */
+    border-radius: 10px;
+
+}
+
+
+#button1 {
+    font-size: 15px;
+    padding: 10px 20px;
+    border-radius: 10px;
+    border: 3px solid rgb(0, 0, 0);    
+   
+}
+
+#button2{
+    font-size: 15px;
+    padding: 10px 20px;
+    border-radius: 10px;
+    border: 3px solid rgb(0, 0, 0);  
+}
+
+#name {
+    font-size: 25px;
+    font-family: gaurav;
+    color: aliceblue;
+
 }
