--- a/css work/styles.css
+++ b/css work/styles.css
@@ -5,7 +5,7 @@
 }
 
 body, html {
-   height: 100%;
+   height: 200%;
    width: 100%;
 
 }
@@ -19,14 +19,35 @@ body, html {
 }
 
 .box1 {
-    height: 100%;
+    height: 25%;
     width: 100%;
     background-image: url(https://images.unsplash.com/photo-1768326943634-f15d407bda45?q=80&w=1506&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
     background-size: cover;
-
-  
- 
 }
+
+.box2 {
+    height:55%;
+    width: 100%;
+    
+}
+
+#image1
+    {
+    width: 100%;
+    height: 100%;
+    background-image: url(https://images.unsplash.com/photo-1767978918948-e8b8317a1a4a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDM3fGJvOGpRS1RhRTBZfHxlbnwwfHx8fHw%3D);
+    background-repeat: no-repeat;
+    }
+   
+/* #image2 
+    {
+    width: 100%;
+    height: 100%;
+    background-image: url(https://images.unsplash.com/photo-1764957079470-afaf381331b6?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+    background-repeat: no-repeat;
+    margin-left: 200px;
+
+    } */
 
 .journey {
     padding-top: 200px;
@@ -59,7 +80,7 @@ h1 {
     padding: 0 15px;
     border: 1px solid white;   /* 👈 border */
     border-radius: 10px;
-
+    position:fixed;
 }
 
 
