--- a/css work/styles.css
+++ b/css work/styles.css
@@ -5,7 +5,7 @@
 }
 
 body, html {
-   height: 200%;
+   height: 100%;
    width: 100%;
 
 }
@@ -19,60 +19,20 @@ body, html {
 }
 
 .box1 {
-    height: 25%;
+    height: 100%;
     width: 100%;
     background-image: url(https://images.unsplash.com/photo-1768326943634-f15d407bda45?q=80&w=1506&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
     background-size: cover;
 }
 
-.box2 {
-    height:55%;
-    width: 100%;
-    
-}
-
-#image1
-    {
-    width: 100%;
-    height: 100%;
-    background-image: url(https://images.unsplash.com/photo-1767978918948-e8b8317a1a4a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDM3fGJvOGpRS1RhRTBZfHxlbnwwfHx8fHw%3D);
-    background-repeat: no-repeat;
-    }
-   
-/* #image2 
-    {
-    width: 100%;
-    height: 100%;
-    background-image: url(https://images.unsplash.com/photo-1764957079470-afaf381331b6?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
-    background-repeat: no-repeat;
-    margin-left: 200px;
-
-    } */
-
-.journey {
-    padding-top: 200px;
-    text-align: center;
-}
-h1 {   
-    color: white;
-    font-size: 50px;
-    /* font-family: journey; */
-    font-weight: 500;
-}
-
-#expbutton {
-    margin-top: 30px;
-    font-size: 15px;
-    padding: 10px 20px;
-    border-radius: 20px;
-    /* border: 3px solid black;     */
-}
-
+/* navbar */
 #container {
 
     height: 7%;
     width: 100%;
-    /* background-image: url(https://media.istockphoto.com/id/1732963074/photo/starry-night-sky-in-space.jpg?s=612x612&w=0&k=20&c=AHcmpswk3g3toHSFt5yCV_1uzMZUaJl95p3UIgm8euo=); */
+    /* background-image: url(https://media.istockphoto.com/id/1732963074/photo/starry-night-sky-in-space.jpg?s=612x612&w=0&k=20&c=AHcmpswk3g3toHSFt5yCV_1uzMZUaJl95p3UIgm8euo=);
+     */
+     background-image: url(https://images.unsplash.com/photo-1491071676596-825e11fccef5?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3Dhttps://images.unsplash.com/photo-1545486332-9e0999c535b2?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
     border-radius: 10px;
     display: flex;
     justify-content: space-between;
@@ -81,6 +41,12 @@ h1 {
     border: 1px solid white;   /* 👈 border */
     border-radius: 10px;
     position:fixed;
+}
+
+#name {
+    font-size: 20px;
+    font-family: gaurav;
+    color: aliceblue;
 }
 
 
@@ -108,9 +74,70 @@ h1 {
     border: 3px solid rgba(252, 133, 64);  
 }
 
-#name {
-    font-size: 20px;
-    font-family: gaurav;
-    color: aliceblue;
+/* main content */
+.journey {
+    padding-top: 200px;
+    text-align: center;
+}
+h1 {   
+    color: white;
+    font-size: 70px;
+    /* font-family: journey; */
+    font-weight: 500;
 }
 
+#expbutton {
+    margin-top: 70px;
+    font-size: 25px;
+    padding: 10px 20px;
+    border-radius: 30px;
+    /* border: 3px solid black;     */
+}
+
+
+/* BOTTOM PAGE STARTS HERE */
+
+.box2 {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    
+    
+}
+
+.box2 h3 {
+    text-align: center;
+    font-size: 60px;
+    margin-top: 50%;
+}
+
+#image1
+    {
+    width: 100%;
+    height: 100%;
+    background-image: url(https://images.unsplash.com/photo-1768938896402-db38dd23ea35?q=80&w=709&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D://images.unsplash.com/photo-1767978918948-e8b8317a1a4a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDM3fGJvOGpRS1RhRTBZfHxlbnwwfHx8fHw%3D);
+    background-repeat: no-repeat;
+    border: 5px solid #000000;
+    color: black;
+    }  
+   
+#image2 
+    {
+    width: 100%;
+    height: 100%;
+    background-image: url(https://images.unsplash.com/photo-1764957079470-afaf381331b6?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+    background-repeat: no-repeat;
+    left: 0;
+    border: 5px solid #fda41f;
+    color:#fda41f;
+    }
+
+#image3{
+    width: 100%;
+    height: 100%;
+    background-image: url(https://images.unsplash.com/photo-1768586624424-7077d4ddbfa9?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+    background-repeat: no-repeat;
+    border: 5px solid #05177e;
+    color: #05177e;
+
+}
