--- a/css work/styles.css
+++ b/css work/styles.css
@@ -40,7 +40,7 @@ body, html {
     padding: 0 15px;
     border: 1px solid white;   /* 👈 border */
     border-radius: 10px;
-    position:fixed;
+    /* position:fixed; */
 }
 
 #name {
@@ -109,6 +109,7 @@ h1 {
     text-align: center;
     font-size: 60px;
     margin-top: 50%;
+    
 }
 
 #image1
@@ -119,6 +120,7 @@ h1 {
     background-repeat: no-repeat;
     border: 5px solid #000000;
     color: black;
+    text-shadow: 3px 3px #fcfcfc;
     }  
    
 #image2 
@@ -130,6 +132,7 @@ h1 {
     left: 0;
     border: 5px solid #fda41f;
     color:#fda41f;
+    text-shadow: 3px 3px #000000;
     }
 
 #image3{
@@ -139,5 +142,6 @@ h1 {
     background-repeat: no-repeat;
     border: 5px solid #05177e;
     color: #05177e;
+    text-shadow: 2px 2px #4d96d1;
 
 }
