--- a/css work/styles.css
+++ b/css work/styles.css
@@ -206,6 +206,76 @@ h1 {
     
 }
 
+
+/* gallery  */
+.gallery-wrapper {
+    display: flex;
+    width: 100%;
+    height: 800px;
+
+}
+
+.gallerybox {
+
+    height: 800px;
+    width: 1100px;
+    background-color: #000000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    
+}
+
+#container4 {
+
+       height: 500px;
+       width: 700px;
+       background-color: #4e585c;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 40px;
+}
+
+#gallerytext {
+    
+    font-size: 30px;
+    color: white;
+    font-weight: 300;
+    
+}
+
+
+#container5 {
+    height: 800px;
+    width: 800px;
+    background-color: rgb(131, 202, 49);
+    
+}
+
+/* #gallery1 {
+    height: 300px;
+    width: 350px;
+    background-color: #c5a4a4;
+}
+
+#gallery2 {
+    height: 300px;
+    width: 350px;
+    background-color: #361717;
+}
+
+#gallery3 {
+    height: 300px;
+    width: 350px;
+    background-color: #a04e4e;
+}
+ */
+
+
+/* conclusion */
+
 #conclusion {
     padding: 90px;
     text-align: center;
