--- a/css work/styles.css
+++ b/css work/styles.css
@@ -212,12 +212,13 @@ h1 {
     display: flex;
     width: 100%;
     height: 800px;
+    border: 10px solid white;
 
 }
 
 .gallerybox {
 
-    height: 800px;
+    height: 100%;
     width: 1100px;
     background-color: #000000;
     display: flex;
@@ -235,7 +236,10 @@ h1 {
         display: flex;
         align-items: center;
         justify-content: center;
+        border: 10px solid white;
         border-radius: 40px;
+
+        
 }
 
 #gallerytext {
@@ -246,32 +250,87 @@ h1 {
     
 }
 
+/* make gallery with a clipboard type background style */
 
 #container5 {
-    height: 800px;
+    height: 100%;
     width: 800px;
     background-color: rgb(131, 202, 49);
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+    
+   
     
 }
 
-/* #gallery1 {
-    height: 300px;
-    width: 350px;
+#gallery1 {
+    margin-top: 50px;
+    margin-right: 450px;
+    height: 350px;
+    width: 280px;
     background-color: #c5a4a4;
+    background-image: url(https://images.unsplash.com/photo-1768471126957-df36ac318dc1?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHw5fHx8ZW58MHx8fHx8);
+    background-position: center;
+    background-size: cover;
+    border: 10px solid white;
+     /* position: absolute; */
 }
 
 #gallery2 {
-    height: 300px;
-    width: 350px;
+
+     height: 350px;
+    width: 280px;
     background-color: #361717;
+    background-image: url(https://images.unsplash.com/photo-1768590238594-625fe0d913aa?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwzN3x8fGVufDB8fHx8fA%3D%3D);
+    background-position: center;
+    background-size: cover;
+    border: 10px solid white;
+     /* position: absolute; */
+    
+    
+   
 }
 
 #gallery3 {
-    height: 300px;
-    width: 350px;
-    background-color: #a04e4e;
+    height: 350px;
+    width: 280px;
+    margin-bottom: 50px;
+    margin-left: 450px;
+    background-color: #667db6;
+    background-image: url(https://images.unsplash.com/photo-1768944285756-9981f5e2eb19?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHw0Mnx8fGVufDB8fHx8fA%3D%3D://images.unsplash.com/photo-1768471126957-df36ac318dc1?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHw5fHx8ZW58MHx8fHx8);    background-position: center;
+    background-size: cover;
+    border: 10px solid white;
+    /* position: absolute; */
+   
 }
- */
+
+/* #gallery4 {
+    height: 350px;
+    width: 280px;
+    margin-bottom: 50px;
+    margin-left: 450px;
+    background-color: #667db6;
+    background-image: url(https://images.unsplash.com/photo-1768944285756-9981f5e2eb19?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHw0Mnx8fGVufDB8fHx8fA%3D%3D://images.unsplash.com/photo-1768471126957-df36ac318dc1?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHw5fHx8ZW58MHx8fHx8);    background-position: center;
+    background-size: cover;
+    border: 10px solid white;
+     position: absolute;
+   
+}
+
+#gallery5 {
+    height: 350px;
+    width: 280px;
+    margin-bottom: 50px;
+    margin-left: 450px;
+    background-color: #667db6;
+    background-image: url(https://images.unsplash.com/photo-1768944285756-9981f5e2eb19?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHw0Mnx8fGVufDB8fHx8fA%3D%3D://images.unsplash.com/photo-1768471126957-df36ac318dc1?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHw5fHx8ZW58MHx8fHx8);    background-position: center;
+    background-size: cover;
+    border: 10px solid white;
+     position: absolute;
+   
+} */
 
 
 /* conclusion */
